# howtocuda

./: .gitignore  info.md
code1/: CMakeLists.txt  addArray.cu  functions.cu  functions.hpp  helloWorld.cu  main.cpp  main_functions.cpp  reduction.cu  utils.cu  utils.h
code1/app/add_kernel/: main.cpp
code1/app/print_info/: main.cpp
code1/app/ui_window/: main.cpp
code1/kernels/: KernelTimer.cu  KernelTimer.hpp  functions.cu  functions.hpp  monochrome.cu  prefixSum.cu  reduction.cu  spotlight.cu
code1/utils/: utils.cu  utils.h
code1/utils/glfw_state/: glfw_state.cpp  glfw_state.hpp
code1/utils/imgui/: imguiBackend.cpp  imguiBackend.hpp
code1/utils/ims/: ims.hpp  ppm.cu
code1/utils/opengl/: gl.cpp  gl.hpp
code1/utils/opengl/textures/: gltex.cpp  gltex.hpp
